--- a/view/options.html
+++ b/view/options.html
@@ -11,6 +11,8 @@
 
     <script src="../lib/dropbox/Dropbox-sdk.min.js"></script>
     <script src="../src/utils.js"></script>
+
+    <script src="DropBoxAuth.js"></script>
     <script src="options.js"></script>
 </head>
 <body>
